unhardcode /usr/lib

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,18 +4,13 @@ cmake_minimum_required(VERSION 2.6)
 project(xfswm)
 
 add_compile_options(-Wall -Wextra -Werror)
-
-add_executable(xfswm main.c)
+configure_file(config.h.in config.h @ONLY)
+add_executable(xfswm main.c config.h)
 
 pkg_check_modules(X11 REQUIRED x11)
-
-target_link_libraries(xfswm ${X11_LIBRARIES} ${X11_XFIXES_LIBRARIES}
-                      ${X11_XINPUT_LIBRARIES})
-target_include_directories(
-    xfswm PUBLIC ${X11_INCLUDE_DIRS} ${X11_XFIXES_INCLUDE_DIRS}
-                 ${X11_XINPUT_INCLUDE_DIRS})
-target_compile_options(xfswm PUBLIC ${X11_CFLAGS_OTHER} ${X11_XFIXES_OTHER}
-                                    ${X11_XINPUT_OTHER})
+target_link_libraries(xfswm ${X11_LIBRARIES})
+target_include_directories(xfswm PUBLIC ${X11_INCLUDE_DIRS})
+target_compile_options(xfswm PUBLIC ${X11_CFLAGS_OTHER})
 
 install(TARGETS xfswm DESTINATION bin)
 install(
